tests/fail/elaboration/unsolved/placeholder-ann.fathom
//~ allow-errors = true

_ : Type
